# bita

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  delete_entry.rs  entries_repository.rs  filesystem.rs  help.rs  main.rs  new_entry.rs  queries.rs  register_new_entry.rs  register_new_event.rs  sqlite.rs  timestamps.rs  version.rs  view_entries.rs
tools/: install.sh
